<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/public_title"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="1" >

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
               	android:layout_marginLeft="10dp"
                android:text="@string/public_task_no"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/public_task_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/public_task_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/public_task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/public_task_place"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/public_task_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/public_task_type"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/public_task_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/public_task_college"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/public_task_college"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/public_task_credit"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/public_task_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/public_exam_times"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/public_exam_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/public_task_score"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/public_task_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>