<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:textSize="12.0sp"
        android:textStyle="bold"
        android:textColor="#ff9b927a"
        android:gravity="center_horizontal"
        android:id="@+id/about_us_txv_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20.0dip"
        android:text="@string/about_us_bottom_txt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textSize="12.0sp"
        android:textColor="#ff9b927a"
        android:gravity="center_horizontal"
        android:id="@+id/about_us_txv_service_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20.0dip"
        android:text="@string/about_us_service_qq_txt"
        android:layout_above="@id/about_us_txv_bottom"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textSize="22.0sp"
        android:textColor="#519DDD"
        android:gravity="center_horizontal"
        android:id="@+id/about_us_txv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30.0dip"
        android:text="@string/about_us_txv_version"
        android:layout_above="@id/about_us_txv_service_qq"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:id="@+id/about_us_imgv_pic"
        android:layout_width="300.0dip"
        android:layout_height="215.0dip"
        android:layout_margin="10.0dip"
        android:src="@drawable/about_us"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/about_us" />

    <TextView
        android:textSize="16.0sp"
        android:textStyle="normal"
        android:textColor="#ff817c6d"
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32.0dip"
        android:layout_marginRight="32.0dip"
        android:text="@string/about_us_txt"
        android:layout_below="@id/about_us_imgv_pic"
        android:layout_centerHorizontal="true" />
</RelativeLayout>