<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textSize="15sp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/insert_schedule_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/schedule_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/insert_schedule_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/schedule_teacher"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/insert_schedule_teacher"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/schedule_place"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/insert_schedule_place"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/schedule_week"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/insert_schedule_week"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">

        <Button
            android:textSize="15sp"
            android:layout_marginRight="50dp"
            android:id="@+id/insert_schedule_button"
            android:layout_width="wrap_content"
            android:background="@drawable/button_border"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/cancleButton"
            android:background="@drawable/button_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/soft_update_cancel" />
    </LinearLayout>
</LinearLayout>